--- a/Dom Manipulation/index.html
+++ b/Dom Manipulation/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Dom Manipulation</title>
 
     <script src="app.js" defer></script>
@@ -11,8 +12,23 @@
   <body>
     <ol>
       <li>List item</li>
-      <li>List item</li>
+      <li id="second-li">List item</li>
       <li>List item</li>
     </ol>
+
+    <div class="scrollable">
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+      <p>This is some content that is long</p>
+    </div>
   </body>
 </html>
