--- a/Dom Manipulation/index.html
+++ b/Dom Manipulation/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Dom Manipulation</title>
 
-    <script src="app.js" defer></script>
-  </head>
-  <body>
-    <ol>
-      <li>List item</li>
-      <li id="second-li">List item</li>
-      <li>List item</li>
-    </ol>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Dom Manipulation</title>
 
-    <div class="scrollable">
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-      <p>This is some content that is long</p>
-    </div>
-  </body>
+  <script src="app.js" defer></script>
+</head>
+
+<body>
+  <ol>
+    <li class="listItem">List item</li>
+    <li id="second-li" class="listItem">List item</li>
+    <li class="listItem">List item</li>
+  </ol>
+
+  <div id="scrollable">
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+    <p>This is some content that is long</p>
+  </div>
+</body>
+
 </html>
